[gd_scene load_steps=4 format=2]

[ext_resource path="res://scenes/PatternAutoClicker.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/AutoClicker.gd" type="Script" id=2]
[ext_resource path="res://scenes/SingleAutoClicker.gd" type="Script" id=3]

[node name="AutoClicker" type="Node2D"]
script = ExtResource( 2 )

[node name="PatternAutoClicker" parent="." instance=ExtResource( 1 )]

[node name="SingleAutoClicker" type="Node2D" parent="."]
script = ExtResource( 3 )

[node name="Timer" type="Timer" parent="SingleAutoClicker"]
process_mode = 0
wait_time = 0.1

[node name="PatternClickers" type="Node2D" parent="."]

[connection signal="click" from="SingleAutoClicker" to="." method="_on_SingleAutoClicker_click"]
[connection signal="timeout" from="SingleAutoClicker/Timer" to="SingleAutoClicker" method="_on_Timer_timeout"]
